# iridium

./: Cargo.toml
screenshots/: screencast.ogv  screencast.webm
shaders/: cube.frag  cube.vert  skybox.frag  skybox.vert
src/: main.rs  math.rs  render.rs  time.rs  world.rs
